# taichi-aot-tests

./: .gitattributes  .gitignore  0001-WIP-Allow-temporary-reading-root-buffer-memory-for-t.patch  0002-WIP-Allow-temporary-reading-root-buffer-memory-for-t.patch  0003-WIP-Add-stable-fluid-ndarray-aot.patch  0004-WIP-Modify-set-image-class-for-t.patch  README.md  debug_return.py  explicit_fem.py  implicit_fem.py  yi.py
android/: build.gradle  local.properties
android/app/src/main/cpp/: CMakeLists.txt  a.out  data.h  debug.cpp  explicit_fem.cpp  implicit_fem.cpp  main.cpp  mesh.cpp  mesh_data.h  mpm88.cpp  stable_fluids.cpp  test.cpp
debug/: func1_c56_0_k0000_vk_0_t00.spv  func2_c58_0_k0001_vk_0_t00.spv  metadata.json  metadata.tcb
desktop/: .gitignore  Makefile  README.md  data.h  explicit_fem.cpp  implicit_fem.cpp  implicit_mesh_fem.cpp  main.cpp  mesh_data.h  mpm88.cpp  no_return.cpp  stable_fluids.cpp
explicit_fem/: advect_c68_0_k0009_vk_0_t00.spv  advect_c70_0_k0009_vk_0_t00.spv  advect_c76_0_k0009_vk_0_t00.spv  floor_bound_c72_0_k0007_vk_0_t00.spv  get_force_c58_0_k0008_vk_0_t00.spv  get_force_c58_0_k0008_vk_1_t01.spv  get_indices_c74_0_k0006_vk_1_t01.spv  get_indices_c76_0_k0006_vk_1_t01.spv  get_indices_c82_0_k0006_vk_1_t01.spv  get_vertices_c56_0_k0002_vk_0_t00.spv  get_vertices_c56_0_k0002_vk_1_t01.spv  init_c70_0_k0004_vk_0_t00.spv  init_c70_0_k0004_vk_1_t01.spv  init_c70_0_k0004_vk_2_t02.spv  init_c72_0_k0004_vk_0_t00.spv  init_c72_0_k0004_vk_1_t01.spv  init_c72_0_k0004_vk_2_t02.spv  init_c78_0_k0004_vk_2_t02.spv  metadata.json  metadata.tcb
implicit_fem/: add1_c62_0_k0013_vk_0_t00.spv  add2_c64_0_k0014_vk_0_t00.spv  add_ndarray_c66_0_k0015_vk_0_t00.spv  dot2scalar_c66_0_k0014_vk_0_t00.spv  dot2scalar_c66_0_k0014_vk_1_t01.spv  dot_c64_0_k0011_vk_0_t00.spv  dot_c64_0_k0011_vk_1_t01.spv  dot_c68_0_k0011_vk_2_t02.spv  fill_ndarray_c72_0_k0013_vk_0_t00.spv  floor_bound_c80_0_k0007_vk_0_t00.spv  floor_bound_c84_0_k0007_vk_0_t00.spv  get_b_c66_0_k0009_vk_0_t00.spv  (+20 more)
(+92 files in other folders)
